--- a/packages/ni.measurementlink.discovery.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.proto/pyproject.toml
@@ -1,15 +1,11 @@
-[tool.poetry]
+[project]
 name = "ni.measurementlink.discovery.v1.proto"
 version = "0.1.0-dev2"
 license = "MIT"
 description = "Protobuf data types for NI discovery gRPC APIs"
-authors = ["NI <opensource@ni.com>"]
-maintainers = [
-  "Brad Keryan <brad.keryan@emerson.com>",
-  "Joe Friedrichsen <joe.friedrichsen@emerson.com>",
-]
+authors = [{name = "NI", email = "opensource@ni.com"}]
+maintainers = [{name = "Joe Friedrichsen", email = "joe.friedrichsen@emerson.com"}, {name = "Brad Keryan", email = "brad.keryan@emerson.com"}]
 readme = "README.md"
-repository = "https://github.com/ni/ni-apis-python"
 keywords = ["ni-apis", "discovery"]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -27,10 +23,17 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
+dynamic = ["dependencies"]
+requires-python = '>=3.9,<4.0'
+
+[project.urls]
+repository = "https://github.com/ni/ni-apis-python"
+
+[tool.poetry]
 packages = [{include = "ni", from = "src"}]
+requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
-python = "^3.9"
 protobuf = {version=">=4.21"}
 
 [tool.poetry.group.dev.dependencies]
@@ -56,14 +59,18 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 # The latest Sphinx requires a recent Python version.
-Sphinx = { version = ">=8.2", python = "^3.11" }
+Sphinx = [
+  { version = ">=7.4", python = ">=3.9,<3.10" },
+  { version = ">=8.1", python = ">=3.10,<3.11" },
+  { version = ">=8.2", python = "^3.11" },
+]
 sphinx-rtd-theme = ">=1.0.0"
 sphinx-autoapi = ">=1.8.4"
 m2r2 = ">=0.3.2"
 toml = ">=0.10.2"
 
 [build-system]
-requires = ["poetry-core>=1.8"]
+requires = ["poetry-core>=2.1.0,<3.0"]
 build-backend = "poetry.core.masonry.api"
 
 
@@ -74,6 +81,7 @@ skips = [
 
 [tool.ni-python-styleguide]
 extend_exclude = "docs,*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi,src/ni/measurementlink/discovery/v1/**/__init__.py"
+application-import-names = "ni.measurementlink.discovery.v1.proto"
 
 [tool.black]
 extend-exclude = 'docs/|_pb2(_grpc)?\.(py|pyi)$'
@@ -94,3 +102,5 @@ exclude = ["**/*_pb2_grpc.py", "**/*_pb2_grpc.pyi", "**/*_pb2.py", "**/*_pb2.pyi
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --doctest-plus --strict-markers"
 testpaths = ["tests"]
+
+
