--- a/packages/ni.grpcdevice.v1.proto/pyproject.bak.toml
+++ b/packages/ni.grpcdevice.v1.proto/pyproject.bak.toml
@@ -1,14 +1,15 @@
-[project]
+[tool.poetry]
 name = "ni.grpcdevice.v1.proto"
 version = "0.1.0-dev3"
 license = "MIT"
 description = "Protobuf generated code for the nidevice_grpc gRPC API"
-authors = [{name = "NI", email = "opensource@ni.com"}]
+authors = ["NI <opensource@ni.com>"]
 maintainers = [
-  {name = "Joe Friedrichsen", email = "joe.friedrichsen@emerson.com"},
-  {name = "Brad Keryan", email = "brad.keryan@emerson.com"}
+  "Brad Keryan <brad.keryan@emerson.com>",
+  "Joe Friedrichsen <joe.friedrichsen@emerson.com>",
 ]
 readme = "README.md"
+repository = "https://github.com/ni/ni-apis-python"
 keywords = ["ni-apis", "grpc-device", "ni_grpc_device_server"]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -26,20 +27,13 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
-dynamic = ["dependencies"]
-requires-python = '>=3.9,<4.0'
-
-[project.urls]
-repository = "https://github.com/ni/ni-apis-python"
-
-[tool.poetry]
 packages = [
   {include = "session_pb2", from = "src"},
   {include = "session_pb2_grpc", from = "src"},
 ]
-requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
+python = "^3.9"
 grpcio = {version=">=1.49.0,<2.0"}
 protobuf = {version=">=4.21"}
 
@@ -64,18 +58,14 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 # The latest Sphinx requires a recent Python version.
-Sphinx = [
-  { version = ">=7.4", python = ">=3.9,<3.10" },
-  { version = ">=8.1", python = ">=3.10,<3.11" },
-  { version = ">=8.2", python = "^3.11" },
-]
+Sphinx = { version = ">=8.2", python = "^3.11" }
 sphinx-rtd-theme = ">=1.0.0"
 sphinx-autoapi = ">=1.8.4"
 m2r2 = ">=0.3.2"
 toml = ">=0.10.2"
 
 [build-system]
-requires = ["poetry-core>=2.1.0,<3.0"]
+requires = ["poetry-core>=1.8"]
 build-backend = "poetry.core.masonry.api"
 
 
@@ -86,7 +76,6 @@ skips = [
 
 [tool.ni-python-styleguide]
 extend_exclude = "docs,*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi,src/**/__init__.py"
-application-import-names = "ni.grpcdevice.v1.proto"
 
 [tool.black]
 extend-exclude = 'docs/|_pb2(_grpc)?\.(py|pyi)$'
@@ -107,4 +96,3 @@ exclude = ["**/*_pb2_grpc.py", "**/*_pb2_grpc.pyi", "**/*_pb2.py", "**/*_pb2.pyi
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --doctest-plus --strict-markers"
 testpaths = ["tests"]
-
