--- a/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
@@ -1,15 +1,14 @@
-[tool.poetry]
+[project]
 name = "ni.measurementlink.discovery.v1.client"
 version = "0.1.0-dev1"
 license = "MIT"
 description = "gRPC Client for NI Discovery Service"
-authors = ["NI <opensource@ni.com>"]
+authors = [{name = "NI", email = "opensource@ni.com"}]
 maintainers = [
-  "Brad Keryan <brad.keryan@emerson.com>",
-  "Joe Friedrichsen <joe.friedrichsen@emerson.com>",
+  {name = "Joe Friedrichsen", email = "joe.friedrichsen@emerson.com"},
+  {name = "Brad Keryan", email = "brad.keryan@emerson.com"}
 ]
 readme = "README.md"
-repository = "https://github.com/ni/ni-apis-python"
 keywords = ["discovery", "client"]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -27,13 +26,21 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
+dynamic = ["dependencies"]
+requires-python = '>=3.9,<4.0'
+
+[project.urls]
+repository = "https://github.com/ni/ni-apis-python"
+
+
+[tool.poetry]
 packages = [{include = "ni", from = "src"}]
+requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
-python = "^3.9"
 grpcio = {version=">=1.49.0,<2.0"}
-ni-grpc-extensions = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurementlink-discovery-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
+ni-grpc-extensions = { version = ">=0.1.0.dev1", allow-prereleases = true }
+ni-measurementlink-discovery-v1-proto = { version = ">=0.1.0.dev1", allow-prereleases = true }
 pywin32 = { version = ">=303", platform = "win32" }
 
 [tool.poetry.group.dev.dependencies]
@@ -57,14 +64,18 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 # The latest Sphinx requires a recent Python version.
-Sphinx = { version = ">=8.2", python = "^3.11" }
+Sphinx = [
+  { version = ">=7.4", python = ">=3.9,<3.10" },
+  { version = ">=8.1", python = ">=3.10,<3.11" },
+  { version = ">=8.2", python = "^3.11" },
+]
 sphinx-rtd-theme = ">=1.0.0"
 sphinx-autoapi = ">=1.8.4"
 m2r2 = ">=0.3.2"
 toml = ">=0.10.2"
 
 [build-system]
-requires = ["poetry-core>=1.8"]
+requires = ["poetry-core>=2.1.0,<3.0"]
 build-backend = "poetry.core.masonry.api"
 
 
@@ -75,6 +86,7 @@ skips = [
 
 [tool.ni-python-styleguide]
 extend_exclude = "docs"
+application-import-names = "ni.measurementlink.discovery.v1.client"
 
 [tool.black]
 extend-exclude = 'docs/'
