--- a/packages/ni.measurementlink.discovery.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.proto/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0-dev2"
 license = "MIT"
 description = "Protobuf data types for NI discovery gRPC APIs"
 authors = [{name = "NI", email = "opensource@ni.com"}]
-maintainers = [{name = "Joe Friedrichsen", email = "joe.friedrichsen@emerson.com"}, {name = "Brad Keryan", email = "brad.keryan@emerson.com"}]
+maintainers = [
+  {name = "Joe Friedrichsen", email = "joe.friedrichsen@emerson.com"},
+  {name = "Brad Keryan", email = "brad.keryan@emerson.com"}
+]
 readme = "README.md"
 keywords = ["ni-apis", "discovery"]
 classifiers = [
